# A2UI

./: .gitignore  README.md  agent.py  agent_executor.py  contact_data.json  deploy.py  hooks.py  prompt_builder.py  pubspec.yaml  pyproject.toml  requirements-docs.txt  tools.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: sprint-task.md
.github/workflows/: check_license.yml  check_private_index.yml  composer_build_and_test.yml  cpp_agent_sdk_build_and_test.yml  docs.yml  e2e_test.yaml  editor_build.yml  flutter_packages_test.yaml  inspector_build.yml  java_build_and_test.yml  ng_build_and_test.yml  react_renderer.yml  web_build_and_test.yml
agent_sdks/conformance/: README.md  conformance_schema.json  pyproject.toml
agent_sdks/conformance/suites/: catalog.yaml  parser.yaml  schema_manager.yaml  streaming_parser.yaml  validator.yaml
agent_sdks/conformance/test_data/: simplified_catalog_v08.json  simplified_catalog_v09.json  simplified_s2c_v09.json
agent_sdks/conformance/test_data/load_examples/bad_json/: bad.json
agent_sdks/conformance/test_data/load_examples/basic/: example2.json
agent_sdks/conformance/test_data/load_examples/glob_filter/: admin_profile.json  user_profile.json  user_settings.json
agent_sdks/conformance/test_data/load_examples/glob_negation/: index.json  visible.json
agent_sdks/conformance/test_data/load_examples/glob_range/: step1.json  step2.json  step3.json
agent_sdks/conformance/test_data/load_examples/glob_recursive/: top.json
agent_sdks/conformance/test_data/load_examples/glob_recursive/nested/: deep.json
agent_sdks/conformance/test_data/load_examples/schema_error/: invalid.json
agent_sdks/conformance/test_data/load_examples/schema_with_strict/: catalog.json
agent_sdks/conformance/test_data/schema_manager/: catalog.json  common_types.json  custom_catalog.json  s2c.json
agent_sdks/conformance/tests/: test_conformance_yaml.py
agent_sdks/cpp/: CMakeLists.txt
agent_sdks/python/: pack_specs_hook.py  release.sh
docs/guides/: a2ui-in-mcp-apps.md  a2ui_over_mcp.md  mcp-apps-in-a2ui.md
docs/scripts/: convert_docs.py
docs/stylesheets/: custom.css
eval/: README.md
renderers/angular/: .gitignore  angular.json  package-lock.json  tsconfig.json  v0_9
renderers/docs/: web_publishing.md
renderers/lit/: CHANGELOG.md  README.md  package-lock.json  package.json
renderers/react/: CHANGELOG.md  package-lock.json  package.json  tsconfig.json
renderers/scripts/: increment_version.mjs  prepare-publish.mjs  publish_npm.mjs  publish_npm.test.mjs
renderers/web_core/: .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.json
samples/agent/adk/gemini_enterprise/cloud_run/: .gcloudignore  README.md  agent.py  deploy.sh  main.py  pyproject.toml
samples/agent/adk/gemini_enterprise/cloud_run/examples/0.8/: contact_card.json
samples/agent/adk/mcp-apps-in-a2ui-sample/: mcp_app.html  pyproject.toml
samples/agent/adk/mcp_app_proxy/: README.md  __main__.py  agent.py  agent_executor.py  pong_app.html  pyproject.toml
samples/agent/adk/mcp_app_proxy/catalogs/0.8/: mcp_app_catalog.json
samples/agent/adk/personalized_learning/: __init__.py  agent.py  context_loader.py  download_openstax.py  openstax_modules.py  pyproject.toml  requirements.txt
samples/mcp/a2ui-in-mcpapps/server/: pyproject.toml
samples/mcp/a2ui-in-mcpapps/server/apps/src/: angular.json  inline.js  package-lock.json  package.json  tsconfig.app.json
samples/mcp/a2ui-in-mcpapps/server/apps/src/src/: index.html  main.css  main.ts
samples/mcp/mcp-apps-calculator/: .gitignore  package.json  pyproject.toml
samples/mcp/mcp-apps-calculator/apps/: calculator.html
samples/mcp/mcp-apps-calculator/apps/src/: calculator.ts  package-lock.json  package.json
scripts/: e2e_test.sh  fix_licenses.sh
specification/scripts/: validate.py
specification/v0_10/: README.md
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/: CMakeLists.txt
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/include/a2ui/: inference_strategy.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/include/a2ui/basic_catalog/: provider.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/include/a2ui/parser/: parser.h  payload_fixer.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/include/a2ui/schema/: manager.h  validator.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/include/a2ui/template/: manager.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/scripts/: generate_embedded_schemas.py
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/src/parser/: streaming.cc  streaming_impl.cc  streaming_impl.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/src/schema/: catalog.cc  validator.cc
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/tests/: test_utils.h
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/tests/parser/: test_parser.cc  test_payload_fixer.cc  test_streaming_v08.cc  test_streaming_v09.cc
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/agent_sdks/cpp/tests/schema/: test_catalog.cc  test_schema_manager.cc  test_validator.cc
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/samples/agent/adk/orchestrator/: README.md  __main__.py  pyproject.toml
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/samples/agent/mcp/a2ui-over-mcp-recipe/: __init__.py  __main__.py  pyproject.toml  recipe_a2ui.json  server.py
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/tools/build_catalog/: README.md  assemble_catalog.py  pyproject.toml
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/tools/build_catalog/tests/: test_assemble_catalog_v08.py
tree/main/samples/agent/adk/gemini_enterprise/agent_engine/tools/build_catalog/tests/fixtures/: basic_catalog.json  component2.json  component3.json  v0_8_custom_catalog.json
(+1296 files in other folders)
