# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "a2ui-in-mcp-apps-server"
version = "0.1.0"
description = "MCP server that serves an A2UI application resource and interactive tools."
dependencies = [
    "click>=8.1.8",
    "mcp[cli]>=1.2.0",
    "sse-starlette>=3.3.4",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
]

[project.scripts]
a2ui-in-mcp-apps-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
